<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:title="@string/worker_header">

        <EditTextPreference
            app:key="worker_number"
            app:title="@string/worker_title"
            app:useSimpleSummaryProvider="true"/>

        <EditTextPreference
            app:key="current_project"
            app:title="@string/current_project"
            app:useSimpleSummaryProvider="true"
            app:isPreferenceVisible="false"/>

    </PreferenceCategory>

    <PreferenceCategory
        app:title="@string/connection_header">

        <EditTextPreference
            app:key="address"
            app:title="@string/address_title"
            app:useSimpleSummaryProvider="true"/>

        <EditTextPreference
            app:key="port"
            app:title="@string/port_title"
            app:useSimpleSummaryProvider="true"/>

        <EditTextPreference
            app:defaultValue="1"
            app:key="timeout"
            app:title="@string/timeout_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

<!--    <PreferenceCategory-->
<!--        app:title="@string/notifications_header">-->

<!--        <SwitchPreferenceCompat-->
<!--            app:key="sync"-->
<!--            app:title="@string/sync_title"/>-->

<!--        <SwitchPreferenceCompat-->
<!--            app:key="attachment"-->
<!--            app:title="@string/attachment_title"-->
<!--            app:summaryOn="@string/attachment_summary_on"-->
<!--            app:summaryOff="@string/attachment_summary_off"-->
<!--            app:dependency="sync"/>-->

<!--        <EditTextPreference-->
<!--            app:key="signature"-->
<!--            app:title="@string/signature_title"-->
<!--            app:useSimpleSummaryProvider="true"/>-->

<!--        <ListPreference-->
<!--            app:key="reply"-->
<!--            app:title="@string/reply_title"-->
<!--            app:entries="@array/reply_entries"-->
<!--            app:entryValues="@array/reply_values"-->
<!--            app:defaultValue="reply"-->
<!--            app:useSimpleSummaryProvider="true"/>-->
<!--    </PreferenceCategory>-->

</PreferenceScreen>